fix - add start_url in manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,6 @@
 {
     "name": "Lily Barberou | Mon Autoportrait",
+    "start_url": "/",
     "short_name": "Lily B | Autoportrait",
     "icons": [
         {
