--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,6 +24,12 @@
             "type": "image/png"
         },
         {
+            "src": "/maskable_icon.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
             "src": "/android-chrome-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
